# Hackathon1-humanoid-robotic-book

./: .gitignore  DEMO_VIDEO_SCRIPT.md  README.md  vercel.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: .env.example  Dockerfile  Dockerfile.huggingface  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
backend/scripts/: generate_quizzes.py  generate_summaries.py  ingest_content.py  init_db.py  translate_content.py
backend/src/: main.py
backend/src/api/: __init__.py  auth.py  content.py  health.py  quiz.py  rag.py  user.py
backend/src/core/: __init__.py  cohere_client.py  config.py  database.py  embeddings.py  gemini.py  qdrant.py  security.py
backend/src/models/: __init__.py  chapter.py  chat.py  progress.py  quiz.py  user.py
backend/src/services/: __init__.py  auth_service.py  progress_service.py  quiz_service.py  rag_service.py
backend/tests/: conftest.py
backend/tests/unit/: test_auth_service.py  test_quiz_service.py
content/quizzes/: chapter-1-quiz.json  chapter-2-quiz.json  chapter-3-quiz.json
content/source/chapter-1/: index.md
content/source/chapter-3/: index.md
content/summaries/: chapter-1-summary.json  chapter-2-summary.json  chapter-3-summary.json
content/translations/ur/chapter-1/: index.md
content/translations/ur/chapter-2/: index.md
frontend/: .env.example  .eslintrc.js  .prettierrc  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json  vercel.json
frontend/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
frontend/docs/: intro.md
frontend/docs/chapter-2/: index.md
frontend/src/components/BookmarkButton/: index.tsx  styles.module.css
frontend/src/context/: AuthContext.tsx
frontend/src/css/: custom.css  rtl.css
frontend/src/hooks/: useReadingProgress.ts
frontend/src/pages/: auth.module.css  dashboard.module.css  dashboard.tsx  index.module.css  index.tsx  login.tsx  register.tsx
frontend/src/services/: api.ts  auth.ts
frontend/src/theme/: Root.tsx
history/prompts/001-book-generation/: 001-book-generation-spec-creation.spec.prompt.md  002-implementation-plan-creation.plan.prompt.md  003-task-list-generation.tasks.prompt.md  004-phase8-phase9-implementation.green.prompt.md
history/prompts/constitution/: 001-initial-constitution-ratification.constitution.prompt.md
specs/001-book-generation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-book-generation/checklists/: requirements.md
specs/001-book-generation/contracts/: auth-api.yaml  quiz-api.yaml  rag-api.yaml  user-api.yaml
(+46 files in other folders)
